# DNSUpdater

./: CMakeLists.txt  README.md  conanfile.txt
.devcontainer/: Dockerfile
src/: CMakeLists.txt  main.cpp
src/api_calls/: CloudflareDNSUpdate.cpp  CloudflareDNSUpdate.h  ExternalIP.cpp  ExternalIP.h
src/api_calls/request_data/: CloudFlareDNSUpdateData.cpp  CloudFlareDNSUpdateData.h
src/configuration/: CurrentIP.cpp  CurrentIP.h  SiteConfiguration.cpp  SiteConfiguration.h  currentIP.cpp  currentIP.h
test/: .clang-tidy  CMakeLists.txt  CloudflareDNSUpdate_Tests.cpp  currentIP_Tests.cpp
